[package]
name = "champr-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic

[dependencies]
iced = { version = "0.3", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.serde_with]
version = "1.11.0"
features = ["json"]
